# mtv-agent

./: .gitignore  Makefile  README.md  config.json.example  mcp.json.example  pyproject.toml
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  cli-reference.md  configuration.md  development.md  index.md  installation.md  llm-backends.md  local-venv-install.md  mcp-metrics-issues.md  publishing.md  quickstart.md  skills-and-playbooks.md
mtv_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  main.py  orchestrator.py
mtv_agent/data/: config.json.example
mtv_agent/data/playbooks/: browse-source-vms.md  check-cluster-health.md  check-mtv-health.md  configure-vddk-image.md  create-migration-target.md  create-vsphere-provider.md  migration-status-report.md  monitor-migration-plan.md  show-migration-network-traffic.md  troubleshoot-migration.md
mtv_agent/lib/: bash_tool.py  html_to_md.py  kubeconfig.py  llm.py  mcp_client.py  mcp_manager.py  playbooks.py  skills.py  text_utils.py  tool_registry.py  virtual_tools.py  web_cache.py  web_tool.py
mtv_agent/lib/chat/: __init__.py  chat_store.py  memory.py
mtv_agent/lib/content/: __init__.py
mtv_agent/lib/kube/: __init__.py  kubeconfig.py
playbooks/: browse-source-vms.md  check-mtv-health.md  monitor-migration-plan.md  show-migration-network-traffic.md  troubleshoot-migration.md
scripts/: run.sh
skills/mtv-cli-docs/: SKILL.md
web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: index.ts
web/src/styles/: reset.css  (+2 more)
(+99 files in other folders)
