[project]
name = "mtv-agent"
version = "0.1.15"
description = "AI agent for MTV/Forklift VM migrations"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "mcp",
    "pydantic-settings",
    "httpx",
    "pyyaml",
    "sse-starlette",
    "claude-openai-proxy",
    "kubernetes",
    "markdownify",
    "beautifulsoup4",
]

[project.urls]
Homepage = "https://github.com/yaacov/mtv-agent"
Repository = "https://github.com/yaacov/mtv-agent"
Issues = "https://github.com/yaacov/mtv-agent/issues"

[project.scripts]
mtv-agent = "mtv_agent.cli:main"

[dependency-groups]
dev = ["ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = ["mtv_agent/web_dist/**"]

[tool.hatch.build.targets.wheel]
packages = ["mtv_agent"]

[tool.hatch.build.targets.wheel.force-include]
"config.json.example" = "mtv_agent/data/config.json.example"
"mcp.json.example" = "mtv_agent/data/mcp.json.example"
